// Copyright 2019 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
////////////////////////////////////////////////////////////////////////////////

syntax = "proto3";

package endpoints.examples.bookstore.v2;


import "google/api/annotations.proto";


//A bookstore service only used to test supporting multiple apis
service Bookstore {
  // Returns a list of all shelves in the bookstore.
  rpc GetShelf(GetShelfRequest) returns (Shelf) {
    // Client example - returns the first shelf:
    //   curl http://DOMAIN_NAME/v2/shelves/1
    option (google.api.http) = {
      get: "/v2/shelves/{shelf}"
    };
  }
  // Returns a list of all shelves in the bookstore.
  // Specifically not using google.api.http option
  // to test grpc_transcoding auto_binding feature.
  // HTTP client can call this method with:
  // POST /endpoints.examples.bookstore.v2.Bookstore/GetShelfAutoBind
  rpc GetShelfAutoBind(GetShelfRequest) returns (Shelf) {
  }
}

// A shelf resource.
message Shelf {
  // A unique shelf id.
  int64 id = 1;
  // A theme of the shelf (fiction, poetry, etc).
  string theme = 2;
}

// Request message for GetShelf method.
message GetShelfRequest {
  // The ID of the shelf resource to retrieve.
  int64 shelf = 1;
}
